2009-02-04  Ross Burton  <ross@linux.intel.com>

	* libgconf-bridge/gconf-bridge.c:
	Fix typo in signal name.

2009-02-03  Ross Burton  <ross@linux.intel.com>

	* libgconf-bridge/gconf-bridge.c:
	Don't connect to row-inserted many times, but connect to
	row-deleted and so on. (#1430, thanks Matthew Barnes)

2008-12-08  Ross Burton  <ross@linux.intel.com>

	* libgconf-bridge/gconf-bridge.c:
	Do not overwrite signal id (thanks Milan Crha)

2008-07-02  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge.vapi:

	Corrections to Vala binding.

2008-07-02  Jorn Baayen  <jorn@openedhand.com>

	* Makefile.am:
	* configure.ac:
	* libgconf-bridge.vapi:

	Add vala bindings.

2007-02-06  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge.doap:
	Corrections.

2006-12-20  Ross Burton  <ross@openedhand.com>

	* libgconf-bridge.doap:
	Add DOAP file.

2006-04-29  Luca Cavalli  <loopback@slackit.org>

	* libgconf-bridge/gconf-bridge.c:
	(window_binding_perform_scheduled_sync),
	(window_binding_state_event_cb), (gconf_bridge_bind_window):

	Save and restore window maximized state.

2006-02-16  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* doc/Makefile.in:
	* po/POTFILES.in:

	Build fixes.

2005-12-15  Jorn Baayen  <jorn@openedhand.com>

	* libgconf-bridge/gconf-bridge.c:
	(gconf_bridge_bind_string_list_store):

	Fix a warning under some versions of gcc.

2005-12-09  Ross Burton  <ross@openedhand.com>

	* doc/libgconf-bridge-docs.sgml:
	* doc/tmpl/gconf-bridge.sgml:
	* libgconf-bridge/gconf-bridge.c:
	* libgconf-bridge/gconf-bridge.h:
	Take API documentation to 100% coverage.

2005-12-09  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* libgconf-bridge/gconf-bridge.c:

	Added a check for CORBA GConf, and if found add a ( better ) workaround
	for GConf bug #322837.

2005-12-09  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* libgconf-bridge/gconf-bridge.c:

	Added check for gconf_value_compare() declaration.

2005-11-30  Jorn Baayen  <jorn@openedhand.com>